src/test/ui/feature-gates/feature-gate-crate_visibility_modifier.rs
crate struct Bender { //~ ERROR `crate` visibility modifier is experimental
    earth: bool,
    fire: bool,
    air: bool,
    water: bool,
}

fn main() {}
